--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Multiples\\": "src/"
+            "Multiples\\": "src/",
+            "Tests\\": "tests/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
     }
 }
