--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
+    },
+    "scripts": {
+        "tests": [
+            "phpunit tests/*.php"
+        ]
     }
 }
